--- a/index.html
+++ b/index.html
@@ -1,10 +1,23 @@
 <!DOCTYPE html>
+
 <html>
 <head>
 <Title>bla</Title>
 <link type="text/css" rel="stylesheet" href="mystyle.css"/>
+
+
 </head>
 <body>
+		<div id = "header">
+			<img src="http://upload.wikimedia.org/wikipedia/commons/8/81/Wikimedia-logo.svg"> 
+			<ul>
+				<li><a href = "#">About</a>/li>
+				<li>Contacts</li>
+				<li>Sign up</li>
+
+			</ul>
+
+		</div>
 <p>blablabla</p>
 </body>
 	</html>
