--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 		<div id = "header">
 			<img src="http://upload.wikimedia.org/wikipedia/commons/8/81/Wikimedia-logo.svg"> 
 			<ul>
-				<li><a href = "#">About</a>/li>
-				<li>Contacts</li>
-				<li>Sign up</li>
+				<li><a href = "#">About</a> </li>
+				<li><a href = "#">Contacts</a></li>
+				<li><a href = "#">Sign up</a></li>
 
 			</ul>
 
