--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
 <Title>bla</Title>
 <link type="text/css" rel="stylesheet" href="mystyle.css"/>
+<link href='http://fonts.googleapis.com/css?family=Oswald:400,300,700' rel='stylesheet' type='text/css'>
 
 
 </head>
