--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 		<div id = "header">
 			<img src="http://upload.wikimedia.org/wikipedia/commons/8/81/Wikimedia-logo.svg"> 
-			<ul>
+			<ul id = "headerList">
 				<li><a href = "#">About</a> </li>
 				<li><a href = "#">Contacts</a></li>
 				<li><a href = "#">Sign up</a></li>
