--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 
 </head>
 <body>
-		<div id = "header">
+		<div class = "nav">
 			<img src="http://upload.wikimedia.org/wikipedia/commons/8/81/Wikimedia-logo.svg"> 
-			<ul id = "headerList">
+			<ul>
 				<li><a href = "#">About</a> </li>
 				<li><a href = "#">Contacts</a></li>
 				<li><a href = "#">Sign up</a></li>
