--- a/index.html
+++ b/index.html
@@ -10,15 +10,11 @@
 </head>
 <body>
 		<div class = "nav">
-			<img src="http://upload.wikimedia.org/wikipedia/commons/8/81/Wikimedia-logo.svg"> 
-			<ul>
-				<li><a href = "#">About</a> </li>
-				<li><a href = "#">Contacts</a></li>
-				<li><a href = "#">Sign up</a></li>
-
-			</ul>
-
+		<img src = "https://www.facebook.com/photo.php?fbid=926412434041651&set=gm.789081361143065&type=1&theater"/>
 		</div>
-<p>blablabla</p>
+		
+		
+		
+		
 </body>
 	</html>
