--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 		<div class = "nav">
-		<img src = "https://www.facebook.com/photo.php?fbid=926412434041651&set=gm.789081361143065&type=1&theater"/>
+		<img src = "https://imagizer.imageshack.us/v2/680x397q90/673/e1IOaU.jpg">
 		</div>
 		
 		
