--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
 <body>
 		<div class = "nav">
 		<img src = "https://imagizer.imageshack.us/v2/680x397q90/673/e1IOaU.jpg">
+		<div class = "header">
+		<h1>Menu</h1>
+		</div>
+		
+		
 		</div>
 		
 		
