--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
     <head>
     	<title>Super Mario!</title>
         <link rel='stylesheet' type='text/css' href='stylesheet.css'/>
-		<script type='text/javascript' src='script.js'></script>
+	<script src="http://code.jquery.com/jquery-latest.min.js"
+        type="text/javascript"></script>
 	</head>
 	<body>
 	<div id="goRight">
