--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
     	<title>Super Mario!</title>
         <link rel='stylesheet' type='text/css' href='stylesheet.css'/>
-	<script src="http://code.jquery.com/jquery-latest.min.js"
+	<script src="//code.jquery.com/jquery-latest.min.js"
         type="text/javascript"></script>
 	</head>
 	<body>
