--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
     <head>
     	<title>Super Mario!</title>
         <link rel='stylesheet' type='text/css' href='stylesheet.css'/>
-	<script src="//code.jquery.com/jquery-latest.min.js"
-        type="text/javascript"></script>
+<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 	</head>
 	<body>
 	<div id="goRight">
