--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
     	<title>Super Mario!</title>
         <link rel='stylesheet' type='text/css' href='stylesheet.css'/>
+        <script type="text/javascript" src="script.js"></script>
 <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 	</head>
 	<body>
