--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     	<title>Super Mario!</title>
         <link rel='stylesheet' type='text/css' href='stylesheet.css'/>
         
-<script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+<script src="jquery-1.11.1.min.js"></script>
 <script type="text/javascript" src="script.js"></script>
 	</head>
 	<body>
