--- a/index.html
+++ b/index.html
@@ -1,26 +1,74 @@
 <!DOCTYPE html>
+
 <html>
-    <head>
-    	<title>Super Mario!</title>
-        <link rel='stylesheet' type='text/css' href='stylesheet.css'/>
-        
-<script src="jquery-1.11.1.min.js"></script>
-<script type="text/javascript" src="script.js"></script>
-	</head>
-	<body>
-	<div id="goRight">
-  <img id ="rightRightDown"src="https://imagizer.imageshack.us/v2/506x335q90/746/SgDnIo.jpg"/>
-  <img id ="rightLeftDown"src="https://imagizer.imageshack.us/v2/506x335q90/539/thCntr.jpg" />
-  </div>
-  
-  <div id = "goLeft">
-  <img id ="leftRightDown"src="https://imagizer.imageshack.us/v2/506x335q90/661/mlDH2S.jpg" class="active"/>
-  
-  <img id ="leftLeftDown"src="https://imagizer.imageshack.us/v2/506x335q90/904/lFx7nN.jpg" />
-  
-  </div>
-  
-<div id = "circle"></div>
-            
-	</body>
+
+<head>
+
+ <title> Bike Wellesley </title>
+
+<link rel="stylesheet" type="text/css" href="iphone.css" media="screen 
+
+and (orientation:portrait)"/>
+
+<link rel="stylesheet" type="text/css" href="iphone_landscape.css" media="screen and (orientation:landscape)"/>
+
+<meta name="viewport" content="width=device-width, user-scalable=no" />
+
+</head>
+
+<body>
+
+ <!-- HTML5 article tag for content -->
+
+ <div id="content">
+
+ 
+
+ <header>Bike Wellesley</header>
+
+ <!-- Wellesley image -->
+
+ <img id="Wellesley" src="Wellesley.jpg" width="320" />
+
+ <!-- H1 means 1st level heading -->
+
+ <h1>Welcome to Bike Wellesley</h1>
+
+ 
+
+ <!-- P stands for paragraph -->
+
+ <p>We believe in bicycles! Everything you need to be a Wellesley 
+
+Cyclist.</p>
+
+ 
+
+ <!-- Navigation buttons -->
+
+ <nav id="main_nav">
+
+ <ul>
+
+ <!-- LI stands for list item -->
+
+ <li><a href="stores.html">Bike Stores </a></li>
+
+ <li><a href="maps.html">Bike Maps </a></li>
+
+
+ <li><a href="ride.html">Go for a Ride</a></li>
+
+<li><a href="buttons.html">Buttons</a></li>
+
+ </ul>
+
+ </nav>
+
+ <footer>CS220: Human-Computer Interaction &copy; 2014</footer>
+
+ </div>
+
+</body>
+
 </html>
