--- a/index.html
+++ b/index.html
@@ -27,6 +27,16 @@
 <div class = "hi">
  <img src = "hi.png"></img>
 </div>
+
+<div id = "navBar">
+<ul>
+	<li>Me</li>
+	<li>Home</li>
+	<li>School</li>
+	<li>Fun facts</li>
+
+</ul>
+	</div>
 </div>
 
 </body>
