--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 
 
- <h1>Hi, <br>my name is Asiya. <br> This small app introduces some things about me and where I'm from. </h1>
+ <h1>Hi, my name is Asiya. This small app introduces some things about me and where I'm from. </h1>
 <div class = "hi">
  <img src = "hi.png"></img>
 </div>
