--- a/index.html
+++ b/index.html
@@ -10,6 +10,16 @@
 <link href='http://fonts.googleapis.com/css?family=Dosis:200' rel='stylesheet' type='text/css'>
 <meta name="viewport" content="width=device-width, user-scalable=no" />
 
+<script>
+window.addEventListener("load",function() {
+	// Set a timeout...
+	setTimeout(function(){
+		// Hide the address bar!
+		window.scrollTo(0, 1);
+	}, 0);
+});
+</script>
+
 </head>
 
 <body>
@@ -30,10 +40,10 @@
 
 <div id = "navBar">
 <ul>
-	<li>Me</li>
-	<li>Home</li>
-	<li>School</li>
-	<li>Fun facts</li>
+	<li><div>Me</div></li>
+	<li><div>Home</div></li>
+	<li><div>School</div></li>
+	<li></div>Fun facts</div></li>
 
 </ul>
 	</div>
