--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@ window.addEventListener("load",function() {
 	// Set a timeout...
 	setTimeout(function(){
 		// Hide the address bar!
+		console.log("scrolling");
 		window.scrollTo(0, 1);
 	}, 0);
 });
