--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <ul>
 	<li><div id = "me">Me</div></li>
 	<li><div id = "home">Home</div></li>
-	<li><div id "school">School</div></li>
+	<li><div id = "school">School</div></li>
 	<li><div id = "fun">Fun facts</div></li>
 
 </ul>
