--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
 
 <div id = "navBar">
 <ul>
-	<li><div id = "me">Me</div></li>
-	<li><div id = "home">Home</div></li>
-	<li><div id = "school">School</div></li>
-	<li><div id = "fun">Fun facts</div></li>
+	<li><div id = "me"><p>Me</div></li>
+	<li><div id = "home"><p>Home</p></div></li>
+	<li><div id = "school"><p>Schoo</p></div></li>
+	<li><div id = "fun"><p>Fun facts</p></div></li>
 
 </ul>
 	</div>
