--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <ul>
 	<li><div id = "me"><p>Me</div></li>
 	<li><div id = "home"><p>Home</p></div></li>
-	<li><div id = "school"><p>Schoo</p></div></li>
+	<li><div id = "school"><p>School</p></div></li>
 	<li><div id = "fun"><p>Fun facts</p></div></li>
 
 </ul>
