--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
 
 <div id = "navBar">
 <ul>
-	<li><div id = "me"><p>Me</p></div></li>
-	<li><div id = "home"><p>Home</p></div></li>
-	<li><div id = "school"><p>School</p></div></li>
-	<li><div id = "fun"><p>Fun facts</p></div></li>
+	<li>Me</li>
+	<li>Home</li>
+	<li>School</li>
+	<li>Fun facts</li>
 
 </ul>
 	</div>
