--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
 
 <div id = "navBar">
 <ul>
-	<li>Me</li>
-	<li>Home</li>
-	<li>School</li>
-	<li>Fun facts</li>
+	<li><div>Me</div></li>
+	<li><div>Home</div></li>
+	<li><div>School</div></li>
+	<li><div>Fun facts</div></li>
 
 </ul>
 	</div>
