--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
 <div id = "navBar">
 <ul>
-	<li><div>Me</div></li>
+	<li><div id="me">Me</div></li>
 	<li><div>Home</div></li>
 	<li><div>School</div></li>
 	<li><div>Fun facts</div></li>
