--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
 <div id = "navBar">
 <ul>
 	<li><div id="me">Me</div></li>
-	<li><div>Home</div></li>
-	<li><div>School</div></li>
-	<li><div>Fun facts</div></li>
+	<li><div id ="home">Home</div></li>
+	<li><div id ="school">School</div></li>
+	<li><div id = "fun">Fun facts</div></li>
 
 </ul>
 	</div>
