--- a/index.html
+++ b/index.html
@@ -28,14 +28,14 @@
  <h1>Hi, my name is Asiya. This small app introduces some things about me and where I'm from. </h1>
 
 <div id = "navBar">
-<ul>
-	<li><div id= "me">Me</div></li>
-	<li><div id ="home">Home</div></li>
-	<li><div id ="school">School</div></li>
-	<li><div id = "fun">Fun facts</div></li>
 
-</ul>
-	</div>
+	<div id= "me">Me</div>	
+	<div id ="home">Home</div>
+	<div id ="school">School</div>
+	<div id = "fun">Fun facts</div>
+
+</div>
+
 </div>
 
 </body>
