--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <div id = "navBar">
 
 	<div id= "me">Me</div>	
-	<div id ="home">Home</div>
+	<div id ="home">Where I'm from</div>
 	<div id ="school">School</div>
 	<div id = "fun">Fun facts</div>
 
