--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 </head>
 
-<body>
+<body id = "index">
 
  <!-- HTML5 article tag for content -->
 
@@ -29,8 +29,8 @@
 
 <div id = "navBar">
 
-	<div id= "me">Me</div>	
-	<div id ="home">Where I'm from</div>
+	<div id= "me"><a href="index.html">Me</a></div>	
+	<div id ="home"><a href="uzb.html">Where I'm from</a></div>
 	<div id ="school">School</div>
 	<div id = "fun">Fun facts</div>
 
