--- a/index.html
+++ b/index.html
@@ -36,9 +36,6 @@
 	<div id ="home"><a href="#uzb" data-transition="slide">Where I'm from</a></div>
 	<div id ="school">School</div>
 	<div id = "fun">Fun facts</div>
-
-
-      <a href="#pagetwo" data-transition="slide">Slide to Page Two</a>
   </div>
 </div> 
 
@@ -46,6 +43,13 @@
  <h1>
  	I was born in Tashkent, Uzbekistan. This country is in Central Asia and has the best food in the world.
  </h1>
+
+  <div data-role="footer" id="navBar">
+<div id= "me"><a href="index.html">Me</a></div>	
+	<div id ="home"><a href="#uzb" data-transition="slide">Where I'm from</a></div>
+	<div id ="school">School</div>
+	<div id = "fun">Fun facts</div>
+  </div>
 </div>
 
 
