--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 
 <link rel="stylesheet" type="text/css" href="style.css">
 <link href='http://fonts.googleapis.com/css?family=Dosis:200' rel='stylesheet' type='text/css'>
+
+
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="viewport" content="width=device-width, user-scalable=no" />
 <link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css">
@@ -18,39 +20,25 @@
 </head>
 
 <body>
+<div id="mePage">
 
 
-
-<div data-role="page" id="mePage">
-  
-  <div data-role="main" class="ui-content">
     <div class = "circular">
  	<img src = 'me.jpg'></img></div>
 
 <h1>Hi, my name is Asiya. This small app introduces some things about me and where I'm from. </h1>
   
-  </div>
 
-  <div data-role="footer" id="navBar">
+
+  <div id="navBar">
 <div id= "me"><a href="index.html">Me</a></div>	
 	<div id ="home"><a href="#uzb" data-transition="slide">Where I'm from</a></div>
 	<div id ="school">School</div>
 	<div id = "fun">Fun facts</div>
   </div>
-</div> 
 
-<div id = "uzb">
- <h1>
- 	I was born in Tashkent, Uzbekistan. This country is in Central Asia and has the best food in the world.
- </h1>
-
-  <div data-role="footer" id="navBar">
-<div id= "me"><a href="index.html">Me</a></div>	
-	<div id ="home"><a href="#uzb" data-transition="slide">Where I'm from</a></div>
-	<div id ="school">School</div>
-	<div id = "fun">Fun facts</div>
-  </div>
 </div>
+
 
 
 
