--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 <head>
 
  <title> About Asiya </title>
-
+<meta name="apple-mobile-web-app-capable" content="yes">
+<meta name="apple-mobile-webapp-status-bar-style" content="black">
 <link rel="stylesheet" type="text/css" href="style.css">
 <link href='http://fonts.googleapis.com/css?family=Dosis:200' rel='stylesheet' type='text/css'>
 
@@ -19,8 +20,8 @@
 
 </head>
 
-<body>
-<div id="mePage">
+<body id = "mePage">
+<div id="content">
 
 
     <div class = "circular">
