--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 <link href='http://fonts.googleapis.com/css?family=Dosis:200' rel='stylesheet' type='text/css'>
 
 
+<meta name="viewport" content="width=device-width, initial-scale=1">
+
 </head>
 
 <body id = "mePage">
