--- a/index.html
+++ b/index.html
@@ -14,31 +14,25 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
 </head>
-
-<body id = "mePage">
-<div id="content">
-
-
-    <div class = "circular">
- 	<img src = 'me.jpg'></img></div>
-
+<body id="mePage">
+    <div id="content">
+        <div class="circular">
+            <img src='https://github.com/AsiyaYakhina/asiyayakhina.github.io/blob/master/me.jpg?raw=true'></img>
+        </div>
+        
 <h1>Hi, my name is Asiya. This small app introduces some things about me and where I'm from. </h1>
-  
 
+        <div id="navBar">
+            <div id="me"><a href="index.html">Me</a>
 
-  <div id="navBar">
-    <div id= "me"><a href="index.html">Me</a></div>	
-	<div id ="home"><a href="#uzb" data-transition="slide">Where I'm from</a></div>
-	<div id ="school">School</div>
-	<div id = "fun">Fun facts</div>
-  </div>
+            </div>
+            <div id="home"><a href="#uzb" data-transition="slide">My home</a>
 
-</div>
-
-
-
-
-
+            </div>
+            <div id="school">My school</div>
+            <div id="fun">Fun facts</div>
+        </div>
+    </div>
 </body>
 
 </html>
