--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <div id="me"><a href="index.html">Me</a>
 
             </div>
-            <div id="home"><a href="#uzb" data-transition="slide">My home</a>
+            <div id="home"><a href="uzb.html">My home</a>
 
             </div>
             <div id="school">My school</div>
