--- a/uzb.html
+++ b/uzb.html
@@ -19,7 +19,17 @@
  <h1>
  	I was born in Tashkent, Uzbekistan. This country is in Central Asia and has the best food in the world.
  </h1>
+  <div id="navBar">
+            <div id="me"><a href="index.html">Me</a>
 
+            </div>
+            <div id="home"><a href="uzb.html">My home</a>
+
+            </div>
+            <div id="school">My school</div>
+            <div id="fun">Fun facts</div>
+        </div>
+    </div>
  <div id="content">
 
 
