--- a/map.html
+++ b/map.html
@@ -77,8 +77,38 @@ function errorGPS(){
 alert("GPS Error");
 }
 
+function displayMapByAddress()
+
+{
+var address=document.getElementById("address");
+//create a Geocoder object and use its geocode method. Pass the 
+
+var geocoder=new google.maps.Geocoder();
+geocoder.geocode({'address': address.value},
+function(results,status)
+{
+initializeByAddress(results[0].geometry.location);
+});
+}
+
+/*This function initialize a map centerd on the location passed as 
+
+parameter*/
+
+function initializeByAddress(location){
+var myOptions={
+zoom: 15,
+center: location,
+mapTypeId: google.maps.MapTypeId.ROADMAP
+}
+var map= new google.maps.Map(document.getElementById("basic_map"), 
+myOptions);
+var marker= new google.maps.Marker({position: location, map: 
+map});
+
 </script>
 
+<script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?sensor=false"></script>
 </body>
 
 </html>
