--- a/map.html
+++ b/map.html
@@ -29,12 +29,10 @@ scale=1.0, target-densityDpi=device-dpi"/>
 
 <script> 
 
-
-
 /* This function is invoked when there is an error in reading GPS info*/
 
 function displayMapByAddress(){
-var address=document.getElementById("address");
+var address="tashkent";
 //create a Geocoder object and use its geocode method. Pass the 
 
 var geocoder=new google.maps.Geocoder();
