--- a/map.html
+++ b/map.html
@@ -32,11 +32,11 @@ scale=1.0, target-densityDpi=device-dpi"/>
 /* This function is invoked when there is an error in reading GPS info*/
 
 function displayMapByAddress(){
-var address="tashkent";
+var address = document.getElementById("address");
 //create a Geocoder object and use its geocode method. Pass the 
 
 var geocoder=new google.maps.Geocoder();
-geocoder.geocode({'address': address.value},
+geocoder.geocode({'address': 'Tashkent'},
 function(results,status)
 {
 initializeByAddress(results[0].geometry.location);
