--- a/uzb.html
+++ b/uzb.html
@@ -19,6 +19,44 @@
  <h1>
  	I was born in Tashkent, Uzbekistan. This country is in Central Asia and has the best food in the world.
  </h1>
+
+
+  <div id="basic_map" style="width:320px;height:240px;"></div>    
+<button class="location" id="geo" onclick="displayMapByAddress()">Geolocate</button>     
+</div>   
+
+<script> 
+
+/* This function is invoked when there is an error in reading GPS info*/
+
+function displayMapByAddress(){
+var geocoder=new google.maps.Geocoder();
+geocoder.geocode({'address': "Tashkent"},
+function(results,status)
+{
+initializeByAddress(results[0].geometry.location);
+});
+}
+
+/*This function initialize a map centerd on the location passed as 
+
+parameter*/
+
+function initializeByAddress(location){
+var myOptions={
+zoom: 15,
+center: location,
+mapTypeId: google.maps.MapTypeId.ROADMAP
+}
+var map= new google.maps.Map(document.getElementById("basic_map"), 
+myOptions);
+var marker= new google.maps.Marker({position: location, map: 
+map});
+}
+
+</script>
+
+<script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?sensor=false"></script>
   <div id="navBar">
             <div id="me"><a href="index.html">Me</a>
 
