--- a/uzb.html
+++ b/uzb.html
@@ -9,7 +9,9 @@
 <link rel="stylesheet" type="text/css" href="style.css">
 <link href='http://fonts.googleapis.com/css?family=Dosis:200' rel='stylesheet' type='text/css'>
 <meta name="viewport" content="width=device-width, user-scalable=no" />
+ <meta name="apple-mobile-web-app-capable" content="yes"> 
 
+ <meta name="apple-mobile-webapp-status-bar-style" content="black">
 
 
 </head>
