--- a/map.html
+++ b/map.html
@@ -14,6 +14,11 @@ scale=1.0, target-densityDpi=device-dpi"/>
     
 
 </head> 
+<body id = "uzb">
+ 
+ <h1>
+ 	I was born in Tashkent, Uzbekistan. This country is in Central Asia and has the best food in the world.
+ </h1>
 
 
  <div id="basic_map" style="width:320px;height:240px;"></div>    
