--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body id="mePage">
     <div id="content">
         <div class="circular">
-            <img src='https://github.com/AsiyaYakhina/asiyayakhina.github.io/blob/master/me.jpg?raw=true'></img>
+            <img src='me.jpg'></img>
         </div>
         
 <h1>Hi, my name is Asiya. This small app introduces some things about me and where I'm from. </h1>
@@ -28,8 +28,8 @@
             <div id="me"><a href="index.html">Me</a>
 
             </div>
-            <div id="home"><a href="uzb.html">My home</a>      </div>
-            <div id="school"><a href="map.html">sMy school</div>
+            <div id="home"><a href="uzb.html">My home</a></div>
+            <div id="school"><a href="map.html">My school</div>
             <div id="fun">Fun facts</div>
         </div>
     </div>
