--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <div id="me"><a href="index.html">Me</a>
 
             </div>
-            <div id="home"><a href="uzb.html">My home</a></div>
+            <div id="home"><a href="map.html">My home</a></div>
             <div id="school"><a href="map.html">My school</div>
             <div id="fun">Fun facts</div>
         </div>
