--- a/map.html
+++ b/map.html
@@ -6,6 +6,7 @@
  <meta name="apple-mobile-webapp-status-bar-style" content="black">
  <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, maximum-
 scale=1.0, target-densityDpi=device-dpi"/> 
+<link href='http://fonts.googleapis.com/css?family=Dosis:200' rel='stylesheet' type='text/css'> 
 <link rel="stylesheet" type="text/css" href="style.css">
 
   <title>Location</title>     
@@ -18,7 +19,7 @@ scale=1.0, target-densityDpi=device-dpi"/>
  	I was born in Tashkent, Uzbekistan. This country is in Central Asia and has the best food in the world.
  </h1>
 
- <button class="location" id="geo" onclick="displayMapByAddress()">Geolocate</button>    
+ <button class="location" id="geo" onclick="displayMapByAddress()">See in Google Maps</button>    
 
  <div id="basic_map" style="width:320px;height:240px;"></div>    
  
