--- a/map.html
+++ b/map.html
@@ -44,7 +44,7 @@ scale=1.0, target-densityDpi=device-dpi"/>
 
 function displayMapByAddress(){
 var geocoder=new google.maps.Geocoder();
-geocoder.geocode({'address': "Tashkent"},
+geocoder.geocode({'address': "299 Pavonia Ave Jersey city New Jersey"},
 function(results,status)
 {
 initializeByAddress(results[0].geometry.location);
