--- a/map.html
+++ b/map.html
@@ -16,7 +16,7 @@ scale=1.0, target-densityDpi=device-dpi"/>
 <body id = "uzb" onLoad="displayMapByAddress()">
  
  <h1>
- 	I was born in Tashkent, Uzbekistan. This country is in Central Asia and has the best food in the world.
+ 	I was born in Tashkent, Uzbekistan. Here's a Google Map view of my city.
  </h1>
 
  <div id="basic_map" style="width:320px;height:240px;"></div>    
