--- a/map.html
+++ b/map.html
@@ -24,14 +24,12 @@ scale=1.0, target-densityDpi=device-dpi"/>
 </div>   
 
 
-  <div id="navBar">
+    <div id="navBar">
             <div id="me"><a href="index.html">Me</a>
 
             </div>
-            <div id="home"><a href="uzb.html">My home</a>
-
-            </div>
-            <div id="school">My school</div>
+            <div id="home"><a href="map.html">My home</a></div>
+            <div id="school"><a href="school.html">My school</div>
             <div id="fun">Fun facts</div>
         </div>
     </div>
