--- a/map.html
+++ b/map.html
@@ -13,14 +13,15 @@ scale=1.0, target-densityDpi=device-dpi"/>
     
 
 </head> 
-<body id = "uzb" onLoad="displayMapByAddress()">
+<!--<body id = "uzb" onLoad="displayMapByAddress()"> -->
+    <body id = "uzb" >
  
  <h1>
  	I was born in Tashkent, Uzbekistan. Here's a Google Map view of my city.
  </h1>
 
  
-
+ <!--<div id="basic_map" style="width:320px;height:220px;"></div> -->
 
 
     <div id="navBar">
