--- a/map.html
+++ b/map.html
@@ -9,6 +9,8 @@ scale=1.0, target-densityDpi=device-dpi"/>
 <link href='http://fonts.googleapis.com/css?family=Dosis:200' rel='stylesheet' type='text/css'> 
 <link rel="stylesheet" type="text/css" href="style.css">
 
+<meta name="viewport" content="width=device-width, initial-scale=1">
+
   <title>Location</title>     
     
 
