--- a/school.html
+++ b/school.html
@@ -18,7 +18,17 @@
     <div id="content">
        
         
-<h1>I'm a junior at Wellesley College majoring in Media Arts and Sciences.</h1>
+<h1>I'm a junior at Wellesley College majoring in Media Arts and Sciences. Below is an animation that I've made for one of my projects.</h1>
+
+<video width="300" height="220" controls>
+
+    <source src="FCUBEpresentation.mp4" type="video/mp4">
+
+    <source src="movie.ogg" type="video/ogg">
+
+    Your browser does not support the video tag.
+
+</video>
 
 
 
