--- a/school.html
+++ b/school.html
@@ -22,7 +22,7 @@
 
 <video width="300" height="220" controls>
 
-    <source src="FCUBEpresentation.mp4" type="video/mp4">
+    <source src="FCUBEpresenation.mp4" type="video/mp4">
 
     <source src="movie.ogg" type="video/ogg">
 
