--- a/school.html
+++ b/school.html
@@ -18,7 +18,7 @@
     <div id="content">
        
         
-<h1>I'm a junior at Wellesley College majoring in Media Arts and Sciences. Below is an animation that I've made for one of my projects.</h1>
+<h1>I'm a Media Arts and Sciences major in Wellesley College. Below is an animation that I've made for one of my projects.</h1>
 
 <video width="300" height="200" controls>
 
