--- a/school.html
+++ b/school.html
@@ -19,12 +19,14 @@
        
         
 <h1>I'm a Media Arts and Sciences major in Wellesley College. Below is an animation that I've made for one of my projects.</h1>
+<div id="videCont">
 
 <video width="280" height="160" controls>
 
     <source src="FCUBEpresenation.mp4" type="video/mp4">
 
     <source src="movie.ogg" type="video/ogg">
+        <div>
 
     Your browser does not support the video tag.
 
