--- a/school.html
+++ b/school.html
@@ -26,11 +26,12 @@
     <source src="FCUBEpresenation.mp4" type="video/mp4">
 
     <source src="movie.ogg" type="video/ogg">
-        <div>
+
 
     Your browser does not support the video tag.
 
 </video>
+   </div>
 
 
 
