--- a/indexTwo.html
+++ b/indexTwo.html
@@ -25,8 +25,7 @@
 
 
         <div id="navBar">
-            <div id="me"><img src ="meIcon.png">
-                <a href="index.html">Me</a>
+            <div id="me"><a href="index.html">Me</a>
 
             </div>
             <div id="home"><a href="map.html">My home</a></div>
