--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <a href="index.html">Me</a>
 
             </div>
-            <div id="home"><a href="map.html">My home</a></div>
+            <div id="home"><img src ="meIcon.png"><a href="map.html">My home</a></div>
             <div id="school"><a href="school.html">My school</div>
             <div id="fun">Fun facts</div>
         </div>
