--- a/indexTwo.html
+++ b/indexTwo.html
@@ -8,6 +8,8 @@
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="apple-mobile-webapp-status-bar-style" content="black">
 <link rel="stylesheet" type="text/css" href="style.css">
+
+<link rel="stylesheet" type="text/css" href="imagesStyle.css">
 <link href='http://fonts.googleapis.com/css?family=Dosis:200' rel='stylesheet' type='text/css'>
 
 
@@ -16,9 +18,14 @@
 </head>
 <body id="mePage">
     <div id="content">
-        <div class="circular">
-            <img src='me.jpg'></img>
-        </div>
+     
+
+<div class="diy-slideshow"><figure class="show"><img src="images/1.jpg" alt="" width="100%" /> <figcaption>Image caption goes here.</figcaption></figure><figure><img src="images/2.jpg" alt="" width="100%" /> <figcaption>Image caption goes here.</figcaption></figure>.
+ 
+<figure>s as needed<span class="prev">«</span>
+<span class="next">»</span>
+ 
+</figure></div>
         
 <h1>Hi, my name is Asiya. This small app introduces some things about me and where I'm from. </h1>
 
