--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <div id="home"><img src ="home.png">
                 <a href="map.html">My home</a></div>
             <div id="school"><a href="school.html">My school</div>
-            <div id="My interests"><a href="interests.html">Fun facts</div>
+            <div id="interests"><a href="interests.html">My interests</div>
         </div>
     </div>
 
