--- a/interests.html
+++ b/interests.html
@@ -36,17 +36,18 @@
             <div id="home"><img src ="home.png">
                 <a href="map.html">My home</a></div>
             <div id="school"><a href="school.html">My school</div>
-            <div id="fun"><a href="interests.html">My interests</div>
+            <div id="interests"><a href="interests.html">My interests</div>
         </div>
     </div>
 
     <script>
     function showPortfolio() {
+        console.log("hiding"); 
         var h1toHide= document.getElementById("h1Drawing");
+        console.log(h1toHide);
         h1toHide.style.display=="none";
 
-
-    }
+}
     </script>
 
 </body>
