--- a/interests.html
+++ b/interests.html
@@ -45,7 +45,8 @@
         console.log("hiding"); 
         var h1toHide= document.getElementById("h1Drawing");
         console.log(h1toHide);
-        h1toHide.style.display=="none";
+        document.getElementById("h1Drawing").style.display=="none";
+        h1toHide.style.display="none";
 
 }
     </script>
