--- a/interests.html
+++ b/interests.html
@@ -22,7 +22,7 @@
 <h1 id ="h1Drawing">I have a background in fine arts and really like drawing.</h1>
 <button id = 'portfolioButton' onClick="showPortfolio();">Want to see my portfolio?</button>
 
-<div id="porfrolioImage">
+<div id="portfolioImage">
 <img src="images/1.jpg">
 
 </div>
