--- a/interests.html
+++ b/interests.html
@@ -23,7 +23,7 @@
 <button id = 'portfolioButton' onClick="showPortfolio();">Want to see my portfolio?</button>
 
 <div id="portfolioImage">
-<img src="images/1.jpg">
+<img id ="drawing" src="images/1.jpg">
 
 </div>
 
@@ -44,7 +44,7 @@
     function showPortfolio() {
          document.getElementById("h1Drawing").style.display="none";
         document.getElementById("portfolioButton").style.display="none";
-        document.getElementById("portfolioImage").display = "visible";
+        document.getElementById("drawing").display = "visible";
                
 
 }
