--- a/interests.html
+++ b/interests.html
@@ -26,7 +26,7 @@
 <img id ="drawing" src="images/1.jpg">
 
 </div>
-
+ <img id ="rightAr" src="images/rightArrow-01.png">
 
         <div id="navBar">
             <div id="me"><img src ="meIcon.png">
@@ -39,6 +39,8 @@
             <div id="interests"><a href="interests.html">My interests</div>
         </div>
     </div>
+
+   
 
     <script>
     function showPortfolio() {
