--- a/school.html
+++ b/school.html
@@ -33,17 +33,23 @@
 </video>
    </div>
 
-
-
+   
         <div id="navBar">
-            <div id="me"><a href="index.html">Me</a>
+            <div onClick="location.href='index.html';" id="me"><img src ="images/icon-01.png">
+                Me</div>
 
-            </div>
-            <div id="home"><a href="map.html">My home</a></div>
-            <div id="school"><a href="school.html">My school</div>
-            <div id="fun">Fun facts</div>
-        </div>
+           
+            <div onClick="location.href='map.html';" id="home"><img src ="images/icon-02.png">
+                My home</div>
+            <div onClick="location.href='school.html';" id="school"><img src ="images/icon-03.png">My school</div>
+            <div onClick="location.href='map.html';"id="interests"><img src ="images/icon-04.png">My interests</div>
+        </div> 
     </div>
+
+
+
+
+</div>
 </body>
 
 </html>
