--- a/interests.html
+++ b/interests.html
@@ -67,12 +67,12 @@ function addNewStyle(newStyle) {
     styleElement.appendChild(document.createTextNode(newStyle));
 }
 var imgCounter = 1;
-var imgUrls = ["images/1.jpg","images/3.jpg","images/4.jpg", "images/5.jpg", "images/8.jpg"];
+var imgUrls = ["images/0.jpg","images/1.jpg","images/2.jpg", "images/3.jpg", "images/4.jpg", "images/5.jpg", "images/6.jpg", "images/7.jpg"];
 
 function showNextImage() {
 document.getElementById("drawing").src=imgUrls[imgCounter];
 imgCounter++;
-if (imgCounter>4) {
+if (imgCounter>7) {
     console.log("backto Zero");
     imgCounter = 0;
 }
