--- a/map.html
+++ b/map.html
@@ -25,14 +25,19 @@ scale=1.0, target-densityDpi=device-dpi"/>
 <div id="basic_map" style="width:320px;height:220px;"></div> 
 
 
-    <div id="navBar">
-            <div id="me"><a href="index.html">Me</a>
+   
+        <div id="navBar">
+            <div onClick="location.href='index.html';" id="me"><img src ="images/icon-01.png">
+                Me</div>
 
-            </div>
-            <div id="home"><a href="map.html">My home</a></div>
-            <div id="school"><a href="school.html">My school</div>
-            <div id="fun">Fun facts</div>
-        </div>
+           
+            <div onClick="location.href='map.html';" id="home"><img src ="images/icon-02.png">
+                My home</div>
+            <div onClick="location.href='school.html';" id="school"><img src ="images/icon-03.png">My school</div>
+            <div onClick="location.href='map.html';"id="interests"><img src ="images/icon-04.png">My interests</div>
+        </div> 
+    </div>
+
     </div>
 
 <script> 
