--- a/map.html
+++ b/map.html
@@ -34,7 +34,7 @@ scale=1.0, target-densityDpi=device-dpi"/>
             <div onClick="location.href='map.html';" id="home"><img src ="images/icon-02.png">
                 My home</div>
             <div onClick="location.href='school.html';" id="school"><img src ="images/icon-03.png">My school</div>
-            <div onClick="location.href='map.html';"id="interests"><img src ="images/icon-04.png">My interests</div>
+            <div onClick="location.href='interests.html';"id="interests"><img src ="images/icon-04.png">My interests</div>
         </div> 
     </div>
 
