--- a/school.html
+++ b/school.html
@@ -33,7 +33,7 @@
 </video>
    </div>
 
-   
+
         <div id="navBar">
             <div onClick="location.href='index.html';" id="me"><img src ="images/icon-01.png">
                 Me</div>
@@ -42,7 +42,7 @@
             <div onClick="location.href='map.html';" id="home"><img src ="images/icon-02.png">
                 My home</div>
             <div onClick="location.href='school.html';" id="school"><img src ="images/icon-03.png">My school</div>
-            <div onClick="location.href='map.html';"id="interests"><img src ="images/icon-04.png">My interests</div>
+            <div onClick="location.href='interests.html';"id="interests"><img src ="images/icon-04.png">My interests</div>
         </div> 
     </div>
 
