--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="apple-mobile-webapp-status-bar-style" content="black">
 <link rel="stylesheet" type="text/css" href="style.css">
-<link href='http://fonts.googleapis.com/css?family=Dosis:200' rel='stylesheet' type='text/css'>
+<link href='http://fonts.googleapis.com/css?family=Dosis:200,300,400' rel='stylesheet' type='text/css'>
 
 
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -33,7 +33,7 @@
             <div onClick="location.href='map.html';" id="home"><img src ="images/icon-02.png">
                 My home</div>
             <div onClick="location.href='school.html';" id="school"><img src ="images/icon-03.png">My school</div>
-            <div onClick="location.href='map.html';"id="interests"><img src ="images/icon-04.png">My interests</div>
+            <div onClick="location.href='interests.html';"id="interests"><img src ="images/icon-04.png">My interests</div>
         </div> 
     </div>
 
