--- a/interests.html
+++ b/interests.html
@@ -31,16 +31,17 @@
 <button id="nextBut" onclick="showNextImage();">Next</button>
 
 
+     
         <div id="navBar">
-            <div id="me"><img src ="meIcon.png">
-                <a href="index.html">Me</a>
+            <div onClick="location.href='index.html';" id="me"><img src ="images/icon-01.png">
+                Me</div>
 
-            </div>
-            <div id="home"><img src ="home.png">
-                <a href="map.html">My home</a></div>
-            <div id="school"><a href="school.html">My school</div>
-            <div id="interests"><a href="interests.html">My interests</div>
-        </div>
+           
+            <div onClick="location.href='map.html';" id="home"><img src ="images/icon-02.png">
+                My home</div>
+            <div onClick="location.href='school.html';" id="school"><img src ="images/icon-03.png">My school</div>
+            <div onClick="location.href='interests.html';"id="interests"><img src ="images/icon-04.png">My interests</div>
+        </div> 
     </div>
 
 
