--- a/map.html
+++ b/map.html
@@ -18,7 +18,7 @@ scale=1.0, target-densityDpi=device-dpi"/>
 <body id = "uzb" onLoad="displayMapByAddress()"> 
 
  <h1>
- 	I was born in Tashkent, Uzbekistan. Here's a Google Map view of my city.
+ 	I was born in Tashkent, Uzbekistan. <br> Here's a Google Map view of my city.
  </h1>
 
  
