--- a/note.html
+++ b/note.html
@@ -35,6 +35,9 @@
 <label for="note">Leave your thoughts:</label>
  <div class="error" id="note-error">Can't leave this empty</div>
  <input type="text" name="note" id="note"> 
+ <input type="submit" value="Send"> 
+
+<a href="index.html">Nevermind</a>
 
 
 </form>
