--- a/note.html
+++ b/note.html
@@ -21,7 +21,7 @@
 
         <div class="info">
 
-<h1>Leave a note for me and I'll get back to you!</h1> 
+<h1>Leave a note for me and I'll get <br> back to you!</h1> 
 
 <form method="post" id="leaveNote" onSubmit=”return validateForm();”> 
 <label for="name">Your Name:</label>
