--- a/note.html
+++ b/note.html
@@ -33,8 +33,9 @@
  <input type="email" name="email" id="email">
 
 <label for="note">Leave your thoughts:</label>
+ <p><textarea name="item3" cols="50" rows="7">Example</textarea></p>
  <div class="error" id="note-error">Can't leave this empty</div>
- <input type="text" name="note" id="note"> 
+
  <input type="submit" value="Send"> 
 
 <a href="index.html">Nevermind</a>
